# reliable.rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yml
examples/: example.rs  fuzz.rs  soak.rs  stats.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_endpoint.rs
src/: endpoint.rs  lib.rs  packet.rs  sequence_buffer.rs
tests/: fuzz.rs  soak.rs
tests/common/: mod.rs
wire-compat/: Cargo.toml  build.rs
wire-compat/c/: README.md  shim.c
wire-compat/src/: lib.rs
