[package]
name = "reliable"
version = "1.4.0"
edition = "2024"
rust-version = "1.88"
authors = ["Glenn Fiedler <glenn@mas-bandwidth.com>"]
description = "A simple packet acknowledgement system for UDP-based protocols"
license-file = "LICENSE"
repository = "https://github.com/mas-bandwidth/reliable.rs"
documentation = "https://docs.rs/reliable"
readme = "README.md"
exclude = [".github/", "fuzz/", "wire-compat/"]
keywords = ["networking", "udp", "gamedev", "acks", "protocol"]
categories = ["network-programming", "game-development"]

[dependencies]
log = "0.4"
