[package]
name = "reliable-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
reliable = { path = ".." }

[[bin]]
name = "fuzz_endpoint"
path = "fuzz_targets/fuzz_endpoint.rs"
test = false
doc = false
bench = false

[workspace]
